still alignment-issue !!

--- a/web/style.css
+++ b/web/style.css
@@ -1,59 +1,85 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-body {
-  font-family: sans-serif;
-}
+/* Add custom CSS here */
 
-.container {
-  width: 100%;
-  margin: 0 auto;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
 }
 
-h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
+.container {
+  padding: 0;
+}
+
+.header-left h1 {
+  margin: 0;
 }
 
 .filtreler {
-  margin-bottom: 20px;
-}
-
-button {
-  font-size: 20px;
-  padding: 10px 20px;
-  margin-right: 10px;
-  border-radius: 5px;
-  border: none;
-  background-color: #007bff;
-  color: #fff;
-  cursor: pointer;
-}
-
-button.aktif {
-  background-color: #0056b3;
-}
-
-ul {
-  list-style: none;
-}
-
-li {
   display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+  justify-content: center;
+  margin: 20px 0;
 }
 
-li img {
-  margin-right: 20px;
-  width: 100px;
-  height: auto;
+#filmListesi {
+  list-style-type: none;
+  padding: 0;
 }
 
-li span {
-  font-size: 24px;
+#filmListesi li {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.login-button,
+.signup-button {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #007bff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.login-button:hover,
+.signup-button:hover {
+  background-color: #0069d9;
+}
+
+.carousel-item img {
+  height: 300px;
+  object-fit: cover;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  width: 5%;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100%;
+  width: 100%;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after {
+  content: ">";
+  font-size: 55px;
+  color: #000;
+}
+
+.carousel-control-prev-icon:after {
+  content: "<";
+  font-size: 55px;
+  color: #000;
 }
